[package]
name = "ping_impl"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.53", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.61.2", features = ["Win32_Networking", "Win32_Networking_WinSock"]}